--- a/ClothBazar.Web/Web.config
+++ b/ClothBazar.Web/Web.config
@@ -11,8 +11,11 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
+    <add name="ClothBazarConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ClothBazar-Database;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ClothBazar.Web-20190823065210.mdf;Initial Catalog=aspnet-ClothBazar.Web-20190823065210;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
