--- a/ClothBazar.Database/ClothBazar.Database.csproj
+++ b/ClothBazar.Database/ClothBazar.Database.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Migrations\201908231417310_Initialized.Designer.cs">
       <DependentUpon>201908231417310_Initialized.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908311818584_ImageURLAdded.cs" />
+    <Compile Include="Migrations\201908311818584_ImageURLAdded.Designer.cs">
+      <DependentUpon>201908311818584_ImageURLAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -69,6 +73,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201908231417310_Initialized.resx">
       <DependentUpon>201908231417310_Initialized.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908311818584_ImageURLAdded.resx">
+      <DependentUpon>201908311818584_ImageURLAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
